fixed lg heading size on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -17,12 +17,11 @@
   main {
     align-items: center;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
 
     .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
+      font-size: 5rem;
     }
   }
   ul.menu-nav,
